--- a/src/Components/List.scss
+++ b/src/Components/List.scss
@@ -4,27 +4,38 @@
   background-color: rgba(172, 172, 172, 0.199);
   color: white;
 
+  .ListSearchInput {
+    margin-left: -13%;
+    margin-right: 2%;
+    width: 200px;
+    height: 30px;
+    color: rgb(250, 250, 250);
+    margin-top: 10px;
+    background-color: rgba(255, 255, 255, 0.205);
+    border: 1px solid rgba(255, 255, 255, 0);
+    border-radius: 5px;
+    outline: none;
+  }
+
   .ListControl {
     width: 50%;
     height: auto;
     display: inline-block;
     border-bottom: 1px solid rgba(255, 255, 255, 0.158);
-   
   }
   .ListFilters {
     display: grid;
     grid-template-columns: auto auto auto;
     :hover {
-        cursor: pointer;
-        background-color: rgba(15, 15, 15, 0.212);
-        
+      cursor: pointer;
+      background-color: rgba(15, 15, 15, 0.212);
     }
     h4 {
-        border: 1px solid rgb(221, 221, 221);
-        padding: 20px;
-        font-size: 16px;
-        text-align: center;
-        width: 275px;
+      border: 1px solid rgb(221, 221, 221);
+      padding: 20px;
+      font-size: 16px;
+      text-align: center;
+      width: 275px;
     }
   }
   .ListData {
