Added confirmation button on add/delete item, created seperate lists ( edit, create, list ), fetch with async-await, state to mob-x state

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
   color: white;
   font-family: 'Times New Roman', Times, serif;
+
+}
+.AppTitle {
+  margin-left: 44%;
 }
