--- a/src/Layouts/Editor.module.scss
+++ b/src/Layouts/Editor.module.scss
@@ -1,19 +1,25 @@
 .EditorUi {
   width: auto;
-  height: auto;
+  height: 200px;
+  padding-left: 1%;
   background-color: rgba(172, 172, 172, 0.199);
   margin-bottom: 3rem;
   color: white;
 
+  .Title {
+    text-align: center;
+    margin-right: 2%;
+  }
   .EditorContent {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    margin-left: 25%;
-    width: 50%;
+    margin-left: 32.7%;
+    width: 34%;
+
 
     label {
       font-size: 15px;
-      margin-right: -50px;
+      margin-right: -30px;
       margin-top: 18px;
     }
     input {
@@ -36,7 +42,8 @@
       margin-left: -170px;
       margin-top: 46px;
       button {
-        margin: 30px 0 30px 30px;
+        position: absolute;
+        margin-left: 23%;
         padding: 10px;
         font-size: 16px;
         background-color: rgba(255, 255, 255, 0.205);
@@ -50,6 +57,9 @@
         background-color: #fcfcfc2a;
         box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
         transform: translateY(-2px);
+      }
+      .btnDelete {
+        margin-left: 27%;
       }
     }
   }
