--- a/src/Layouts/Pagination.module.scss
+++ b/src/Layouts/Pagination.module.scss
@@ -1,7 +1,7 @@
 .Pagination {
     display: inline-flex;
     list-style-type: none;
-    margin-left: -30px;
+    margin-left: 44%;
     .PageItem {
        a {
            color: white;
