--- a/src/Components/Pagination.module.scss
+++ b/src/Components/Pagination.module.scss
@@ -1,7 +1,8 @@
 .Pagination {
     display: inline-flex;
     list-style-type: none;
-    margin-left: 45.3%;
+    margin-left: 44.3%;
+    position: fixed;
     .PageItem {
        a {
            color: white;
