Implemented edit logic, changing some styles

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: gray;
-  background-image: url(https://technohoop.com/wp-content/uploads/2021/06/Lets-talk-about-the-great-wallpapers-in-Windows-11-930x620.jpg);
+  background-image: url(https://i.imgur.com/H4rH6e2.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
