Added EDIT button, list doesn't show on every page, filter bug fixed, MENU layout fixed

--- a/src/Components/DeleteModal.module.scss
+++ b/src/Components/DeleteModal.module.scss
@@ -45,5 +45,19 @@
 
   .button {
     margin-left: 30px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.205);
+    color: black;
+    border: 1px solid rgba(255, 255, 255, 0);
+    border-radius: 5px;
+    margin-top: 11px;
+  }
+  .button:hover {
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    background-color: #fcfcfc2a;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-2px);
   }
 }
