--- a/src/Pages/Editor.module.scss
+++ b/src/Pages/Editor.module.scss
@@ -13,8 +13,27 @@
   .EditorContent {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    margin-left: 32.7%;
+    margin-left: 24%;
     width: 34%;
+
+    .DropdownLabel {
+      position: absolute;
+      margin-left: 33%;
+    }
+
+    .SelectDropdown {
+      position: absolute;
+      margin-left: 38%;
+      width: 200px;
+      height: 30px;
+      color: white;
+      margin-top: 10px;
+      background-color: rgba(255, 255, 255, 0.205);
+      border: 1px solid rgba(255, 255, 255, 0);
+      border-radius: 5px;
+      outline: none;
+
+    }
 
 
     label {
@@ -31,6 +50,7 @@
       border: 1px solid rgba(255, 255, 255, 0);
       border-radius: 5px;
       outline: none;
+      
     }
     p {
       display: grid;
@@ -39,11 +59,21 @@
 
     }
     .EditorCom {
-      margin-left: -170px;
+      margin-left: -15px;
       margin-top: 46px;
-      button {
+      .buttonConfirm {
         position: absolute;
-        margin-left: 23%;
+        margin-left: 21%;
+        padding: 10px;
+        font-size: 16px;
+        background-color: rgba(255, 255, 255, 0.205);
+        color: rgb(0, 0, 0);
+        border: 1px solid rgba(255, 255, 255, 0);
+        border-radius: 5px;
+      }
+      .buttonDelete {
+        position: absolute;
+        margin-left: 26%;
         padding: 10px;
         font-size: 16px;
         background-color: rgba(255, 255, 255, 0.205);
